--- a/app/public/views/index.html
+++ b/app/public/views/index.html
@@ -19,14 +19,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <!-- Reset CSS -->
-    <link rel="stylesheet" href="../assets/css/reset.css">
+    <link rel="stylesheet" href="../app/assets/css/reset.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../app/assets/css/style.css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
 
           <div class="col-md-6 mx-auto">
             <div class="card">
-                <img class="card-img-top" src="../assets/images/nowBrewing2.jpg" alt="Card image cap">
+                <img class="card-img-top" src="../app/assets/images/nowBrewing2.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Brewery Locator</h5>
                 <p class="card-text">Great spots throughout the Phoenix East Valley.</p>
@@ -68,7 +68,7 @@
 
           <div class="col-md-6 mx-auto">
             <div class="card">
-            <img class="card-img-top" src="../assets/images/bartenderTaps2.jpg" alt="Card image cap">
+            <img class="card-img-top" src="../app/assets/images/bartenderTaps2.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Beer Directory</h5>
                 <p class="card-text">Pilsners. Porters. IPAs. Discover them all today! </p>
