--- a/app/public/views/breweryList.html
+++ b/app/public/views/breweryList.html
@@ -19,15 +19,15 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <!-- Reset CSS -->
-    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/js/maps.js">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/js/maps.js">
            
         
     <title>Brewery List</title>
@@ -151,7 +151,7 @@
                 </div>
             </nav>    
           </body>
-    <script type="text/javascript" src="assets/js/getBrews.js"></script>
+    <script type="text/javascript" src="./assets/js/getBrews.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIt4DdhP9s2fNCn9haXpM2SqZDMpfpulc&callback=initMap">
     </script>
 </html>
